crates/paideia-as-diagnostics/tests/snapshots/render_human__secondary_span_different_line.snap
---
source: crates/paideia-as-diagnostics/tests/render_human.rs
assertion_line: 97
expression: rendered
---
error[E0001]: redefinition error

  --> test.pdx:2:1
   |
 2 | beta
   | ^^^^

  ::: test.pdx:1:1
   |
 1 | alpha
   | ^^^^^ defined here
